Nova/Jenkins/k8s/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      nodeSelector:
        node-type: jenkins
        purpose: jenkins
      containers:
      - name: sonarqube
        image: sonarqube:8.9.9-community
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: sonar-data
          mountPath: /opt/sonarqube/data
        - name: sonar-extensions
          mountPath: /opt/sonarqube/extensions
      volumes:
      - name: sonar-data
        emptyDir: {}
      - name: sonar-extensions
        emptyDir: {}
